fix: icon alignment

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -501,7 +501,6 @@ span {
     slot[name='icon']::slotted(*) {
       // Add margin to the right to space the icon from the text
       margin-right: 8px;
-      display: flex;
     }
   }
 
@@ -511,6 +510,11 @@ span {
     slot[name='icon']::slotted(*) {
       // Add margin to the left to space the icon from the text
       margin-left: 8px;
+    }
+  }
+
+  &-align {
+    slot[name='icon']::slotted(*) {
       display: flex;
     }
   }
